--- a/index.html
+++ b/index.html
@@ -551,7 +551,8 @@
             </div>
         </div>
     </div>
-
+    <!-- Overlay para menú móvil -->
+    <div class="nav-overlay" id="navOverlay"></div>
     <script src="script.js"></script>
 </body>
 
